--- a/index.html
+++ b/index.html
@@ -92,25 +92,28 @@
   </div>
 
   <!-- Footer with Banner Ad -->
-  <div id="bannerAdContainer" style="width: 360px; height: 50px; margin: 0 auto; position: fixed; bottom: 40px; left: 50%; transform: translateX(-50%); z-index: 1000;">
-    <!-- Banner Ad will be loaded here -->
+  <div id="bannerAdContainer" style="width: 360px; height: 50px; margin: 0 auto; position: fixed; bottom: 90px; left: 50%; transform: translateX(-50%); z-index: 1000;">
+    <!-- Google AdMob Banner Ad -->
     <ins class="adsbygoogle"
          style="display:inline-block;width:360px;height:50px"
          data-ad-client="ca-pub-6948714269796627"
          data-ad-slot="7517631973"></ins>
   </div>
-</div>
-	
-<script type="text/javascript">
-	atOptions = {
-		'key' : '1401828e48164d6e5d2cfae0724ee0df',
-		'format' : 'iframe',
-		'height' : 50,
-		'width' : 320,
-		'params' : {}
-	};
-</script>
-<script type="text/javascript" src="//www.highperformanceformat.com/1401828e48164d6e5d2cfae0724ee0df/invoke.js"></script>
+
+  <!-- New Footer Ad Script -->
+  <div style="width: 320px; height: 50px; margin: 0 auto; position: fixed; bottom: 40px; left: 50%; transform: translateX(-50%); z-index: 1001;">
+    <script type="text/javascript">
+      atOptions = {
+        'key' : '1401828e48164d6e5d2cfae0724ee0df',
+        'format' : 'iframe',
+        'height' : 50,
+        'width' : 320,
+        'params' : {}
+      };
+    </script>
+    <script type="text/javascript" src="//www.highperformanceformat.com/1401828e48164d6e5d2cfae0724ee0df/invoke.js"></script>
+  </div>
+
   <footer>
     Powered by NAS
   </footer>
