--- a/index.html
+++ b/index.html
@@ -7,238 +7,171 @@
   <link rel="stylesheet" href="style.css" />
   <!-- Google AdMob SDK -->
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-  <style>
-    /* Login/Signup Styles */
-    .auth-screen {
-      min-height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background: #f6f6f6;
-      flex-direction: column;
-      position: absolute;
-      top: 0; left: 0; width: 100%; height: 100%;
-      z-index: 2000;
-    }
-    .auth-box {
-      background: #fff;
-      padding: 32px 24px;
-      border-radius: 16px;
-      box-shadow: 0 4px 24px rgba(0,0,0,0.09);
-      min-width: 310px;
-      width: 90%;
-      max-width: 340px;
-      text-align: center;
-      position: relative;
-      margin-bottom: 16px;
-    }
-    .auth-title {
-      font-size: 1.7rem;
-      color: #ff7a00;
-      font-weight: bold;
-      margin-bottom: 12px;
-      letter-spacing: 1px;
-    }
-    .auth-toggle {
-      display: flex;
-      justify-content: center;
-      gap: 12px;
-      margin-bottom: 18px;
-    }
-    .auth-toggle button {
-      background: none;
-      border: none;
-      font-size: 1.1rem;
-      color: #888;
-      cursor: pointer;
-      padding: 6px 16px;
-      border-radius: 8px;
-      transition: background 0.2s, color 0.2s;
-    }
-    .auth-toggle .active {
-      color: #fff;
-      background: #ff7a00;
-      font-weight: bold;
-    }
-    .auth-input {
-      width: 100%;
-      padding: 10px 12px;
-      margin-bottom: 14px;
-      border: 1px solid #ddd;
-      border-radius: 8px;
-      font-size: 1rem;
-      outline: none;
-      transition: border 0.2s;
-    }
-    .auth-input:focus {
-      border: 1.5px solid #ff7a00;
-    }
-    .auth-btn {
-      width: 100%;
-      padding: 11px 0;
-      background: #ff7a00;
-      color: #fff;
-      font-size: 1.1rem;
-      border: none;
-      border-radius: 8px;
-      font-weight: bold;
-      cursor: pointer;
-      margin-top: 6px;
-      transition: background 0.2s;
-    }
-    .auth-btn:hover {
-      background: #e86d00;
-    }
-    .auth-link {
-      margin-top: 12px;
-      font-size: 0.97rem;
-      color: #888;
-      cursor: pointer;
-      text-decoration: underline;
-    }
-    .auth-error {
-      color: #ff3b3b;
-      font-size: 0.93rem;
-      margin-bottom: 8px;
-      min-height: 18px;
-    }
-    @media (max-width: 400px) {
-      .auth-box { min-width: unset; width: 98%; }
-    }
-  </style>
 </head>
 <body>
-  <!-- Login/Signup Screen -->
-  <div id="auth-screen" class="auth-screen">
-    <div class="auth-box">
-      <div class="auth-title">MEMORY MATCH</div>
-      <div class="auth-toggle">
-        <button id="loginTab" class="active">Login</button>
-        <button id="signupTab">Sign Up</button>
-      </div>
-      <div id="auth-error" class="auth-error"></div>
-      <!-- Login Form -->
-      <form id="loginForm">
-        <input type="email" class="auth-input" id="loginEmail" placeholder="Email" required />
-        <input type="password" class="auth-input" id="loginPassword" placeholder="Password" required />
-        <button type="submit" class="auth-btn">Login</button>
-      </form>
-      <!-- Signup Form -->
-      <form id="signupForm" style="display:none;">
-        <input type="text" class="auth-input" id="signupName" placeholder="Full Name" required />
-        <input type="email" class="auth-input" id="signupEmail" placeholder="Email" required />
-        <input type="password" class="auth-input" id="signupPassword" placeholder="Password" required />
-        <input type="password" class="auth-input" id="signupConfirm" placeholder="Confirm Password" required />
-        <button type="submit" class="auth-btn">Sign Up</button>
-      </form>
-    </div>
-    <div style="color:#aaa;font-size:0.98rem;">Powered by NAS</div>
-  </div>
+    <div id="main-app-container">
+        <!-- Login/Signup Page -->
+        <div id="auth-page" class="hidden">
+            <h1>Welcome to the Game!</h1>
+            <div class="auth-toggle">
+                <button id="show-login" class="active">Login</button>
+                <button id="show-signup">Sign Up</button>
+            </div>
 
-  <!-- Start Screen -->
-  <div id="start-screen" class="center-screen hidden">
-    <h1 class="small-title">MEMORY MATCH</h1>
-    <button id="startBtn" class="btn-primary">Start</button>
-  </div>
+            <!-- Login Form -->
+            <form id="login-form" class="auth-form">
+                <h2>Login</h2>
+                <div class="form-group">
+                    <label for="login-email">Email:</label>
+                    <input type="email" id="login-email" required>
+                </div>
+                <div class="form-group">
+                    <label for="login-password">Password:</label>
+                    <input type="password" id="login-password" required>
+                </div>
+                <button type="submit">Login</button>
+                <p id="login-message" class="message error"></p>
+            </form>
 
-  <!-- Game Screen -->
-  <div id="game-screen" class="hidden">
-    <header class="game-header">
-      <h1 class="small-title">MEMORY MATCH</h1>
-      <div class="toggles-row">
-        <div class="toggle-wrapper toggle-left">
-          <label class="switch orange-switch">
-            <input type="checkbox" id="soundToggle" checked />
-            <span class="slider"></span>
-          </label>
-          <div class="toggle-label">Sound</div>
+            <!-- Signup Form -->
+            <form id="signup-form" class="auth-form hidden">
+                <h2>Sign Up</h2>
+                <div class="form-group">
+                    <label for="signup-email">Email:</label>
+                    <input type="email" id="signup-email" required>
+                </div>
+                <div class="form-group">
+                    <label for="signup-password">Password:</label>
+                    <input type="password" id="signup-password" required>
+                </div>
+                <div class="form-group">
+                    <label for="confirm-password">Confirm Password:</label>
+                    <input type="password" id="confirm-password" required>
+                </div>
+                <button type="submit">Sign Up</button>
+                <p id="signup-message" class="message error"></p>
+            </form>
         </div>
-        <button id="pauseBtn" class="btn-pause" title="Pause/Resume Game">❚❚</button>
-        <div class="toggle-wrapper toggle-right">
-          <label class="switch orange-switch">
-            <input type="checkbox" id="vibrationToggle" checked />
-            <span class="slider"></span>
-          </label>
-          <div class="toggle-label">Vibration</div>
+
+        <!-- Game Page (Contains all game specific HTML) -->
+        <div id="game-page" class="hidden">
+            <!-- Game Header (contains welcome message, logout, game toggles) -->
+            <header class="game-header">
+                <!-- Welcome/Logout Row -->
+                <div id="game-page-logout-header">
+                    <h1 id="welcome-message">Welcome, User!</h1>
+                    <button id="logout-btn">Logout</button>
+                </div>
+                <!-- Game Title (from original game HTML) -->
+                <h1 class="small-title">MEMORY MATCH</h1>
+                <!-- Toggles Row (from original game HTML) -->
+                <div class="toggles-row">
+                    <div class="toggle-wrapper toggle-left">
+                        <label class="switch orange-switch">
+                            <input type="checkbox" id="soundToggle" checked />
+                            <span class="slider"></span>
+                        </label>
+                        <div class="toggle-label">Sound</div>
+                    </div>
+
+                    <button id="pauseBtn" class="btn-pause" title="Pause/Resume Game">❚❚</button>
+
+                    <div class="toggle-wrapper toggle-right">
+                        <label class="switch orange-switch">
+                            <input type="checkbox" id="vibrationToggle" checked />
+                            <span class="slider"></span>
+                        </label>
+                        <div class="toggle-label">Vibration</div>
+                    </div>
+                </div>
+            </header>
+
+            <!-- Start Screen (moved inside game-page) -->
+            <div id="start-screen" class="center-screen hidden">
+                <h1 class="small-title">MEMORY MATCH</h1>
+                <button id="startBtn" class="btn-primary">Start</button>
+            </div>
+
+            <!-- Game Screen (moved inside game-page) -->
+            <div id="game-screen" class="hidden">
+                <div class="game-wrapper">
+                    <div class="game-info">
+                        <div class="level-info">Level: <span id="levelDisplay">1</span></div>
+                        <div class="score-info">Score: <span id="scoreDisplay">0</span></div>
+                        <div class="time-info">Time: <span id="timerDisplay">0</span>s</div>
+                    </div>
+                    <div class="game-container" id="game"></div>
+                </div>
+            </div>
+
+            <!-- Resume Popup Modal -->
+            <div id="resumePopup" class="popup hidden">
+                <div class="popup-content">
+                    <h2>Welcome Back!</h2>
+                    <p>You have a saved game.</p>
+                    <div class="popup-buttons">
+                        <button id="newGameBtn" class="btn-primary">Start New Game</button>
+                        <button id="continueBtn" class="btn-primary">Continue <br/><small>(Watch Ad)</small></button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Win/Lose Popup Modal -->
+            <div id="popup" class="popup hidden">
+                <div class="popup-content">
+                    <h2 id="popupTitle">You Won!</h2>
+                    <p id="popupMessage">Level Complete!</p>
+                    <div class="popup-stats" id="popupStats">
+                        <div><span class="level-label">Level:</span> <span id="popupLevel"></span></div>
+                        <div><span class="score-label">Score:</span> <span id="popupScore"></span></div>
+                        <div><span class="time-label">Time:</span> <span id="popupTime"></span>s</div>
+                    </div>
+                    <div class="popup-buttons" id="popupButtons">
+                        <button id="homeBtn" class="btn-primary">Home</button>
+                        <button id="nextLevelBtn" class="btn-primary">Next Level</button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Timeout Popup Modal -->
+            <div id="timeoutPopup" class="popup hidden">
+                <div class="popup-content">
+                    <h2>Time Out!</h2>
+                    <div class="popup-buttons" style="justify-content: center; gap: 15px;">
+                        <button id="timeoutContinueBtn" class="btn-primary">Continue <br/><small>(Watch Ad)</small></button>
+                        <button id="timeoutPlayAgainBtn" class="btn-primary">Play Again</button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Footer with Banner Ad -->
+            <div id="bannerAdContainer">
+                <!-- Google AdMob Banner Ad -->
+                <ins class="adsbygoogle"
+                    style="display:inline-block;width:360px;height:50px"
+                    data-ad-client="ca-pub-6948714269796627"
+                    data-ad-slot="7517631973"></ins>
+            </div>
+
+            <!-- New Footer Ad Script -->
+            <div class="new-footer-ad-container">
+                <script type="text/javascript">
+                atOptions = {
+                    'key' : '1401828e48164d6e5d2cfae0724ee0df',
+                    'format' : 'iframe',
+                    'height' : 50,
+                    'width' : 320,
+                    'params' : {}
+                };
+                </script>
+                <script type="text/javascript" src="//www.highperformanceformat.com/1401828e48164d6e5d2cfae0724ee0df/invoke.js"></script>
+            </div>
+
+            <footer>
+                Powered by NAS
+            </footer>
         </div>
-      </div>
-    </header>
-    <div class="game-wrapper">
-      <div class="game-info">
-        <div class="level-info">Level: <span id="levelDisplay">1</span></div>
-        <div class="score-info">Score: <span id="scoreDisplay">0</span></div>
-        <div class="time-info">Time: <span id="timerDisplay">0</span>s</div>
-      </div>
-      <div class="game-container" id="game"></div>
     </div>
-  </div>
-
-  <!-- Resume Popup Modal -->
-  <div id="resumePopup" class="popup hidden">
-    <div class="popup-content">
-      <h2>Welcome Back!</h2>
-      <p>You have a saved game.</p>
-      <div class="popup-buttons">
-        <button id="newGameBtn" class="btn-primary">Start New Game</button>
-        <button id="continueBtn" class="btn-primary">Continue <br/><small>(Watch Ad)</small></button>
-      </div>
-    </div>
-  </div>
-
-  <!-- Win/Lose Popup Modal -->
-  <div id="popup" class="popup hidden">
-    <div class="popup-content">
-      <h2 id="popupTitle">You Won!</h2>
-      <p id="popupMessage">Level Complete!</p>
-      <div class="popup-stats" id="popupStats">
-        <div><span class="level-label">Level:</span> <span id="popupLevel"></span></div>
-        <div><span class="score-label">Score:</span> <span id="popupScore"></span></div>
-        <div><span class="time-label">Time:</span> <span id="popupTime"></span>s</div>
-      </div>
-      <div class="popup-buttons" id="popupButtons">
-        <button id="homeBtn" class="btn-primary">Home</button>
-        <button id="nextLevelBtn" class="btn-primary">Next Level</button>
-      </div>
-    </div>
-  </div>
-
-  <!-- Timeout Popup Modal -->
-  <div id="timeoutPopup" class="popup hidden">
-    <div class="popup-content">
-      <h2>Time Out!</h2>
-      <div class="popup-buttons" style="justify-content: center; gap: 15px;">
-        <button id="timeoutContinueBtn" class="btn-primary">Continue <br/><small>(Watch Ad)</small></button>
-        <button id="timeoutPlayAgainBtn" class="btn-primary">Play Again</button>
-      </div>
-    </div>
-  </div>
-
-  <!-- Footer with Banner Ad -->
-  <div id="bannerAdContainer" style="width: 360px; height: 50px; margin: 0 auto; position: fixed; bottom: 90px; left: 50%; transform: translateX(-50%); z-index: 1000;">
-    <!-- Google AdMob Banner Ad -->
-    <ins class="adsbygoogle"
-         style="display:inline-block;width:360px;height:50px"
-         data-ad-client="ca-pub-6948714269796627"
-         data-ad-slot="7517631973"></ins>
-  </div>
-
-  <!-- New Footer Ad Script -->
-  <div style="width: 320px; height: 50px; margin: 0 auto; position: fixed; bottom: 40px; left: 50%; transform: translateX(-50%); z-index: 1001;">
-    <script type="text/javascript">
-      atOptions = {
-        'key' : '1401828e48164d6e5d2cfae0724ee0df',
-        'format' : 'iframe',
-        'height' : 50,
-        'width' : 320,
-        'params' : {}
-      };
-    </script>
-    <script type="text/javascript" src="//www.highperformanceformat.com/1401828e48164d6e5d2cfae0724ee0df/invoke.js"></script>
-  </div>
-
-  <footer>
-    Powered by NAS
-  </footer>
 
   <!-- Audio Files -->
   <audio id="flipSound" src="tap.mp3" preload="auto"></audio>
@@ -247,59 +180,6 @@
   <audio id="pauseSound" src="pause.mp3" preload="auto"></audio>
   <audio id="restartSound" src="restart.mp3" preload="auto"></audio>
 
-  <script>
-    // Auth Screen Logic
-    const authScreen = document.getElementById('auth-screen');
-    const loginTab = document.getElementById('loginTab');
-    const signupTab = document.getElementById('signupTab');
-    const loginForm = document.getElementById('loginForm');
-    const signupForm = document.getElementById('signupForm');
-    const authError = document.getElementById('auth-error');
-    const startScreen = document.getElementById('start-screen');
-
-    loginTab.onclick = function() {
-      loginTab.classList.add('active');
-      signupTab.classList.remove('active');
-      loginForm.style.display = '';
-      signupForm.style.display = 'none';
-      authError.textContent = '';
-    };
-    signupTab.onclick = function() {
-      signupTab.classList.add('active');
-      loginTab.classList.remove('active');
-      signupForm.style.display = '';
-      loginForm.style.display = 'none';
-      authError.textContent = '';
-    };
-
-    // Dummy Auth (Replace with real backend logic)
-    loginForm.onsubmit = function(e) {
-      e.preventDefault();
-      // Simple demo: accept any email/password
-      authError.textContent = '';
-      setTimeout(() => {
-        authScreen.style.display = 'none';
-        startScreen.classList.remove('hidden');
-      }, 500);
-    };
-    signupForm.onsubmit = function(e) {
-      e.preventDefault();
-      const pass = document.getElementById('signupPassword').value;
-      const confirm = document.getElementById('signupConfirm').value;
-      if (pass !== confirm) {
-        authError.textContent = 'Passwords do not match!';
-        return;
-      }
-      authError.textContent = '';
-      setTimeout(() => {
-        authScreen.style.display = 'none';
-        startScreen.classList.remove('hidden');
-      }, 500);
-    };
-
-    // Optionally, hide auth screen if already logged in (e.g., via localStorage)
-    // if(localStorage.getItem('user')) { authScreen.style.display='none'; startScreen.classList.remove('hidden'); }
-  </script>
   <script src="script.js"></script>
 </body>
 </html>
