--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <!-- IMPORTANT: Viewport meta for fixed size -->
   <meta name="viewport" content="width=360, height=640, initial-scale=1, maximum-scale=1, user-scalable=no" />
   <title>Memory Match Game</title>
   <link rel="stylesheet" href="style.css" />
@@ -9,6 +10,7 @@
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
+    <!-- Main container for the entire application (fixed 360x640px viewport) -->
     <div id="main-app-container">
         <!-- Login/Signup Page -->
         <div id="auth-page" class="hidden">
@@ -182,4 +184,4 @@
 
   <script src="script.js"></script>
 </body>
-</html>
+  </html>
